--- a/CISBenchmark.vcxproj.filters
+++ b/CISBenchmark.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="source\Test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TestMethods.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Test.h">
